# devsdk

./: .flake8  .gitignore  .pre-commit-config.yaml  create_project_structure.zsh  monkeytype.ini  pyproject.toml  pytype.cfg  tsconfig.json
dockerfiles/: triton.Dockerfile
k8s-manifests/: ingress.yaml
k8s-manifests/caching/: deployment.yaml  service.yaml
k8s-manifests/datalake/: deployment.yaml  service.yaml
k8s-manifests/knowledge_graph/: deployment.yaml  service.yaml
k8s-manifests/model_serving/: deployment.yaml  service.yaml
k8s-manifests/model_training/: deployment.yaml  service.yaml
src/infrastructure/k3s/: k3s_manager.py
